[package]
name = "rustaudio-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
# don't use Crates.io. See issue#794
cpal = { git = "https://github.com/RustAudio/cpal.git", features = ["asio"] }
ringbuf = "0.3.3"

